@@ -1,4 +1,4 @@
-package com.rabobank.argos4j.cli;/*
+/*
  * Copyright (C) 2019 - 2020 Rabobank Nederland
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,6 +13,8 @@ package com.rabobank.argos4j.cli;/*
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+package com.rabobank.argos4j.cli;
+
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.rabobank.argos.argos4j.Argos4jError;
 import com.rabobank.argos.argos4j.Argos4jSettings;
@@ -34,7 +36,6 @@ import org.mapstruct.factory.Mappers;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.net.URISyntaxException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.security.GeneralSecurityException;
@@ -46,9 +47,9 @@ class LinkRegistry {
     private LinkRegistry() {
     }
 
-    private static Properties properties = Properties.getInstance();
+    private static final Properties properties = Properties.getInstance();
 
-    static void storeLink(String runId, String segmentName, String stepName, Link link) throws URISyntaxException, IOException {
+    static void storeLink(String runId, String segmentName, String stepName, Link link) throws  IOException {
         Argos4jSettings argos4jSettings = createArgosSettings();
         ArgosServiceClient argosServiceClient = new ArgosServiceClient(argos4jSettings, properties.getPassPhrase().toCharArray());
         Signature signature = new Argos4JSigner().sign(argosServiceClient.getKeyPair(), properties.getPassPhrase().toCharArray(), new JsonSigningSerializer().serialize(link));
@@ -57,13 +58,11 @@ class LinkRegistry {
         ObjectMapper objectMapper = new ObjectMapper();
         String fileName = createFileName(runId, segmentName, stepName);
         String json = objectMapper.writeValueAsString(restLinkMetaBlock);
-        IOUtils.write(json, new FileOutputStream(new File(fileName)), "UTF-8");
+        IOUtils.write(json, new FileOutputStream(new File(fileName)), UTF_8);
     }
 
-    private static String createFileName(String runId, String segmentName, String stepName) throws URISyntaxException {
-        Path basePath = Paths.get(
-                LinkRegistry.class.getProtectionDomain().getCodeSource().getLocation().toURI())
-                .getParent().toAbsolutePath();
+    private static String createFileName(String runId, String segmentName, String stepName)  {
+        Path basePath = Path.of(properties.getWorkspace());
         return basePath.toString() +
                 "/" +
                 properties.getKeyId() + "-" +
@@ -72,7 +71,7 @@ class LinkRegistry {
                 runId + "-" +
                 segmentName + "-" +
                 stepName +
-                "-link.json";
+                ".link";
     }
 
     private static Argos4jSettings createArgosSettings() {
@@ -84,7 +83,7 @@ class LinkRegistry {
                 .build();
     }
 
-    static Optional<Link> getLink(String runId, String segmentName, String stepName) throws URISyntaxException, IOException, GeneralSecurityException {
+    static Optional<Link> getLink(String runId, String segmentName, String stepName) throws  IOException, GeneralSecurityException {
 
         String fileName = createFileName(runId, segmentName, stepName);
         boolean exists = new File(fileName).exists();
@@ -113,7 +112,7 @@ class LinkRegistry {
         }
     }
 
-    static void removeLink(String runId, String segmentName, String stepName) throws URISyntaxException {
+    static void removeLink(String runId, String segmentName, String stepName)  {
         String file = createFileName(runId, segmentName, stepName);
         File fileToDelete = FileUtils.getFile(file);
         FileUtils.deleteQuietly(fileToDelete);
